# dcs

./: CMakeLists.txt  README.md  TLS_VERSIONS.cmake  ToDo.md  dcs.cfg  dcs.sh
macros/: CMakeLists.txt  build_autotools_subproject.cmake  build_cmake_subproject.cmake  build_packages.cmake  print_config_summary.cmake  set_packages_and_dependencies.cmake
platform/: almalinux8.platform  arch.platform  centos7.platform  debian.platform  fedora.platform  linux_cluster.platform  macos.platform  macos_bigsur.platform  macos_catalina.platform  macos_mojave.platform  opensuse15.platform  rhel7.platform
